# toxic_comment_predict

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: github-actions-demo.yml
model/bert_toxic_predict/: config.json
model/tokenizer/: config.json  tokenizer.json
notebooks/: BERT_train.ipynb
src/application/: api_models.py  main.py  text_preprocessing.py
src/application/classifier/: model_from_file.py  predict_tools.py  text_preprocessing.py
tests/: test_func.py  test_server.py  test_text_preprocessing.py  test_tools.py
